Fixed errors and responses